<resources>
    <string name="app_name">UI_WidgetsSample</string>
    <string name="infoText">All the functionality of the App is in the Widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text2">MY WIDGET</string>
    <string name="widget_id">Widget ID</string>
    <string name="xx">XX</string>
    <string name="last_updated">Last Updated</string>
    <string name="date_count_format">%1$d @%2$s</string>
    <string name="update_now">Update now</string>
</resources>
