<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/section_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/AppWidgetSection">

        <TextView
            android:id="@+id/appWidget_id_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/widget_id"
            style="@style/AppWidgetLabel"/>

        <TextView
            android:id="@+id/appWidget_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xx"
            style="@style/AppWidgetText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_below="@id/section_id"
        style="@style/AppWidgetSection">

        <TextView
            android:id="@+id/appWidget_update_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/last_updated"
            style="@style/AppWidgetLabel"/>

        <TextView
            android:id="@+id/appWidget_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_count_format"
            style="@style/AppWidgetText"/>

    </LinearLayout>
    
    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_update"
        android:layout_centerHorizontal="true"
        android:text="@string/update_now"
        style="@style/AppWidgetButton"/>

</RelativeLayout>